--- a/index.html
+++ b/index.html
@@ -1,12 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+
+  <title>Midterm Pt 3</title>
 </head>
+
 <body>
-  
+  <header>
+    <h1>Kendall-Rose C</h1>
+    <div class="flex-container">
+      <p id="biography">After being the second person to ever climb the empire state building upside down while doing a
+        handstand and
+        carrying a panda, I decided to open a bakery. A couple weeks after that due to a wild series of events, I became
+        a
+        web developer and have remained one while I prepare to return to the circus to be the clown my ex always said I
+        was! It's been 7 years since then and I've worked for a number of companies and helped create some well known
+        websites still used today! <span class="underline">If you're looking for someone who can really be an asset to
+          your team, I'm your
+          gal!</span>
+      </p>
+      <div id="TheBagel">
+        <p>Something that I would like everyone to know is that I'd prefer it if you don't mention bagels to me. There
+          was
+          an accident a while back and I'm still recovering. I've included a photo here depicting a recreation of what
+          happened to me.</p>
+        <figure>
+          <img width="150px" src="img/food-photographer-eV5PkVkDWDs-unsplash.jpg" alt="I dropped my bagel...">
+          <figcaption>
+            Photo by <a
+              href="https://unsplash.com/@phototastyfood?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Food
+              Photographer</a> on <a
+              href="https://unsplash.com/photos/eV5PkVkDWDs?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          </figcaption>
+        </figure>
+      </div>
+    </div>
+  </header>
+  <main>
+    <p>I'm proud to say that I've worked on many notable websites for different companies but listed below what others
+      have said about me from what are perhaps
+      my 3 most notable:</p>
+    <section id="reviews">
+      <article class="review-card">
+        <h3><a href="https://www.twitter.com">Twitter</a></h3>
+        <hr>
+        <ul>
+          <li>
+            <p>"Rose was instrumental to the development of many features especially adding the ability to post images!"
+            </p>
+          </li>
+          <li>
+            <p>"They made amazing sandwiches!"</p>
+          </li>
+        </ul>
+      </article>
+
+      <article class="review-card">
+        <h3>
+          <a href="https://docs.google.com">Google Docs</a>
+        </h3>
+        <hr>
+        <ul>
+          <li>
+            <p>"I'm not sure how they did it but they managed to develop a feature that made coffee while writing a
+              document, it did get scrapped by management sadly before it went into production"</p>
+          </li>
+          <li>
+            <p>"I've never seen someone help me debug my code while they were still asleep, the difference once they've
+              had their coffee is large."</p>
+          </li>
+        </ul>
+      </article>
+      <article class="review-card">
+        <h3>
+          <a href="http://111111111111111111111111111111111111111111111111111111111111.com/">Arnold Sailormoonegger</a>
+        </h3>
+        <hr>
+        <ul>
+          <li>
+            <p>"I have never known fear like the one I developed for bagels after their story."</p>
+          </li>
+          <li>
+            <p>"This was amazing, Rose really held the team together through all the struggles we went through to create
+              this masterpiece and I'm proud to say I can retire knowing I've made a difference."</p>
+          </li>
+        </ul>
+      </article>
+    </section>
+  </main>
+  <footer>
+    <p>Kendall-Rose &copy;</p>
+    <p>If you would like to get in touch with me for work, please click <a id="contactLink" href="#">here</a>
+    </p>
+  </footer>
+
+  <script src="script/script.js"></script>
 </body>
+
 </html>
